# pg-migrust

./: Cargo.toml  package.json  pre-install.js  start.js  uninstall.js
src/: main.rs
