[package]
name = "pg-migrust"
version = "0.1.2"
edition = "2021"
description = "Very simple postgress database migration tool written in rust"
license = "MIT"

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
serde = "1.0.162"
serde_derive = "1.0.163"
serde_json = "1.0.96"
directories = "5.0"
rand = "0.8.5"

[dependencies.uuid]
version = "1.3.2"
features = [
    "v1",
    "fast-rng",
    "macro-diagnostics",
]
